# codename-generator

./: Dockerfile  README.md  app.py  index.html  pyproject.toml  styles.css  tests.py
app/: index.html  styles.css
